# PySTIXView

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  lint.yml
docs/: requirements.txt
docs/source/: conf.py  credits.rst  documentation.rst  index.rst  installation.rst  usage.rst
pystixview/: __init__.py  pystixview.py
pystixview/icons/: LICENSE.md
tests/: bundle1_graph.json  empty_graph.json  graph.html  stix_bundle2.json  stix_bundle4.json  test_pystixview.py
tests/.ipynb_checkpoints/: bundle1_graph-checkpoint.json
