[tool.poetry]
name = "pystixview"
version = "0.1.6"
authors = ["Vincenzo Caputo <caputo.vincenzo@protonmail.com>"]
description = "A Python library to create and display STIX2 graphs"
license = "BSD 3-Clause"
readme = "README.md"
documentation = "https://pystixview.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
Homepage = "https://github.com/vincenzocaputo/PySTIXView"
Issues = "https://github.com/vincenzocaputo/PySTIXView/issues"

[tool.poetry.dependencies]
python = "^3.10"
stix2 = "^3.0.1"
pyvis = "^0.3.2"
ipython = "^8.23.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
Sphinx = "^7.2.6"
jupyterlab = "^4.1.5"
twine = "^5.0.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pip = "^25.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
